Tests/RunCMake/CMakePresets/LowVersion-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/LowVersion:
Error: @2,14: Unrecognized "version" field
  "version": 0,
             \^
